unpackaged/objects/Plan_Of_Study_Result__c.object
<CustomObject>
    <fields>
        <fullName>CAP__c</fullName>
        <label>Cumulative CAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Planning__c</fullName>
        <label>Career Planning Recomendations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Extra_Curricular__c</fullName>
        <label>Extra Curricular</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MC__c</fullName>
        <label>Cumulative MCs completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Of_Study__c</fullName>
        <label>Plan Of Study</label>
        <referenceTo>Plan_Of_Study__c</referenceTo>
        <relationshipLabel>Plan Of Study Results</relationshipLabel>
        <relationshipName>Plan_Of_Study_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Special Programmes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reflection__c</fullName>
        <label>Thoughts &amp; Reflections for the year</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Recommended Tasks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Plan Of Study Result</label>
    <nameField>
        <displayFormat>POSR-{0000000000}</displayFormat>
        <label>POS Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Of Study Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>